--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,22 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+[epub|type~="bridgehead"]{
+	display: inline-block;
+	font-style: italic;
+	margin-top: 0;
+	margin-right: auto;
+	margin-bottom: 3em;
+	margin-left: auto;
+	max-width: 60%;
+	text-align: justify;
+	text-indent: 0;
+}
+
+footer{
+	text-align: right;
+}
+
+time{
+	color: red;
+}
