--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -26,6 +26,10 @@ footer{
 	text-align: right;
 }
 
+i em{
+	font-style: normal;
+}
+
 section[epub|type~="halftitlepage"] span[epub|type~="subtitle"]{
 	display: block;
 	font-size: .75em;
