Bring glossary up to standards

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -24,12 +24,6 @@ span[epub|type~="subtitle"]{
 	font-weight: normal;
 }
 
-dt{
-	margin-top: 0.5em;
-	font-variant: small-caps;
-}
-
-dd{
-	margin-bottom: 0.5em;
-	margin-left: 0.5em;
+dd + dt{
+	margin-top: 1em;
 }
